moved js and tried to make footer

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -20,7 +20,7 @@ header{
 
   color: white;
 	border-bottom:1px solid #dddddd;
-	background:rgb(21, 37, 70);
+	background: #121E59;
 
 	line-height:60px;
 }
