--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,16 +1,58 @@
-//*footer {
-  display: flex;
 
-  margin-right: 50px;
-  margin-left: 50px;
-
-  border: 1px solid green;
-
-  justify-content: space-around;
-
-}
-*//
 
 .footer {
-  display: grid;
+  display: flex;
+  flex-direction: column;
+
+  background-color: #121E59;
+
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+
+.footer__bio {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+
+.footer__bio__pic {
+  width:50px;
+  height:50px;
+  margin-bottom: 1em;
+
+  border-radius: 50%;
+  background:rgb(124, 129, 126);
+}
+
+.footer__section {
+  display: flex;
+
+  margin-bottom: 2em;
+
+  justify-content: space-around;
+}
+
+p {
+  text-align: center;
+
+  color: white;
+}
+
+.footer__welcome {
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
+p:last-child {
+  margin-top: 1em;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  color: white;
 }
