--- a/styles/footer.css
+++ b/styles/footer.css
@@ -7,12 +7,13 @@
   background-color: #121E59;
 
   flex-wrap: wrap;
-  justify-content: flex-end;
 }
 
 .footer__bio {
   display: flex;
   flex-direction: column;
+
+  margin: 0 0.5em 0 0.5em;
 
   align-items: center;
 }
@@ -31,7 +32,7 @@
 
   margin-bottom: 2em;
 
-  justify-content: space-around;
+  justify-content: center;
 }
 
 p {
