Сделала первый блок
вроде норм

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -7,6 +7,8 @@
 @import "sections/quotes.css";
 @import "sections/more-info.css";
 @import "footer.css";
+@import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab');
+
 
 * {
   -webkit-font-smoothing: antialiased;
