--- a/styles/header.css
+++ b/styles/header.css
@@ -1,4 +1,6 @@
-
+.menu__classic {
+  display: none;
+}
 
 .logo {
   border: 1px solid black;
@@ -65,7 +67,7 @@ header {
   font-weight: bold;
   line-height: 65px;
 }
-.menu {
+.menu__hamburger {
   position: absolute;
   z-index: 1000000;
 
@@ -79,14 +81,14 @@ header {
   font-size: 12px;
   font-weight:bold;
 }
-.menu ul {
+.menu__hamburger ul {
   margin: 0;
   padding: 0;
 
   list-style-type: none;
   list-style-image: none;
 }
-.menu li {
+.menu__hamburger li {
   display: block;
 
   padding:15px 0 15px 0;
@@ -101,24 +103,24 @@ header {
   border-bottom:#dddddd 1px solid;
   background:#ffffff;
 }
-.menu ul li a {
+.menu__hamburger ul li a {
   margin: 0px;
 
   text-decoration: none;
 
   color:#666;
 }
-.menu ul li a:hover {
+.menu__hamburger ul li a:hover {
   text-decoration:none;
 
   color: #666;
 }
-.menu a {
+.menu__hamburger a {
   text-decoration:none;
 
   color:#666;
 }
-.menu a:hover {
+.menu__hamburger a:hover {
   text-decoration:none;
 
   color:#666;
@@ -143,4 +145,10 @@ span {
 }
 a {
   color:#336699;
+}
+
+@media (min-width: 768px) {
+  .menu__button {
+    display: none;
+  }
 }
