--- a/styles/header.css
+++ b/styles/header.css
@@ -3,11 +3,6 @@
 }
 
 .logo {
-  border: 1px solid black;
-  border-radius: 4;
-}
-
-.logo {
   width:40px;
   height:40px;
   margin: 1em 1em 1em 1em;
@@ -19,6 +14,8 @@
 }
 
 header {
+  display: flex;
+
 	width:100%;
 	height:60px;
 
@@ -126,15 +123,6 @@ header {
   color:#666;
 }
 
-.glyphicon-home {
-  margin: 0 auto;
-  margin-top: 5px;
-
-  color: white;
-
-  font-size:1.5em;
-}
-
 header {
   display:inline-block;
 
@@ -150,5 +138,30 @@ a {
 @media (min-width: 768px) {
   .menu__button {
     display: none;
+  }
+
+  .menu__hamburger {
+    display: none;
+  }
+
+  .menu__classic {
+    display: flex;
+
+    list-style-type: none;
+
+  }
+
+  .menu__classic li {
+    margin-right: 2em;
+    margin-left: 1em;
+  }
+  header {
+    display: flex;
+
+    justify-content: space-between;
+  }
+
+  .logo {
+   margin-left: 2em;
   }
 }
