--- a/styles/footer.css
+++ b/styles/footer.css
@@ -9,7 +9,8 @@
   flex-wrap: wrap;
 }
 
-.footer__bio {
+
+.footer__section>a {
   display: flex;
   flex-direction: column;
 
@@ -64,13 +65,24 @@ a:visited {
 
     grid-template-areas:
     ". footer__welcome ."
-    "section1 section1 section1"
+    "footer__bio1 footer__bio2 footer__bio3"
     "section2 section2 section2";
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
   }
   .footer__welcome {
+    display: grid;
+
     grid-area: footer__welcome;
+    justify-self: center;
+  }
+
+  .footer__welcome>* {
+    justify-content: center;
+  }
+
+  .footer__bio1 {
+    grid-area: footer__bio1;
   }
 
 
