--- a/styles/header.css
+++ b/styles/header.css
@@ -3,6 +3,11 @@
 }
 
 .logo {
+  border: 1px solid black;
+  border-radius: 4;
+}
+
+.logo {
   width:40px;
   height:40px;
   margin: 1em 1em 1em 1em;
@@ -14,8 +19,6 @@
 }
 
 header {
-  display: flex;
-
 	width:100%;
 	height:60px;
 
@@ -123,6 +126,15 @@ header {
   color:#666;
 }
 
+.glyphicon-home {
+  margin: 0 auto;
+  margin-top: 5px;
+
+  color: white;
+
+  font-size:1.5em;
+}
+
 header {
   display:inline-block;
 
@@ -138,31 +150,5 @@ a {
 @media (min-width: 768px) {
   .menu__button {
     display: none;
-  }
-
-  .menu__hamburger {
-    display: none;
-  }
-
-  .menu__classic {
-    display: flex;
-
-    list-style-type: none;
-
-  }
-
-  .menu__classic li {
-    margin-right: 2em;
-    margin-left: 1em;
-  }
-  header {
-    display: flex;
-
-    justify-content: space-between;
-  }
-
-  .logo {
-   margin-left: 2em;
-
   }
 }
