--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,16 +1,19 @@
 
 
 .footer {
-  display: flex;
-  flex-direction: column;
+  display: grid;
 
   background-color: #121E59;
 
-  flex-wrap: wrap;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 2em;
+
+
 }
 
 
-.footer__section>a {
+.footer__bio {
   display: flex;
   flex-direction: column;
 
@@ -28,13 +31,6 @@
   background:rgb(124, 129, 126);
 }
 
-.footer__section {
-  display: flex;
-
-  margin-bottom: 2em;
-
-  justify-content: center;
-}
 
 p {
   text-align: center;
@@ -42,14 +38,22 @@ p {
   color: white;
 }
 
-.footer__welcome {
-  margin-top: 2em;
-  margin-bottom: 2em;
-}
-
 p:last-child {
   margin-top: 1em;
 }
+
+.footer__welcome {
+  display: flex;
+  flex-direction: column;
+
+  margin-top: 2em;
+  margin-bottom: 2em;
+
+  justify-content: center;
+  align-items: center;
+  grid-column: 1/3;
+}
+
 
 a {
   text-decoration: none;
