--- a/styles/footer.css
+++ b/styles/footer.css
@@ -5,7 +5,7 @@
 
   background-color: #121E59;
 
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 0.2fr;
   grid-template-columns: 1fr 1fr;
   grid-gap: 2em;
 
@@ -61,4 +61,24 @@ a {
 
 a:visited {
   color: white;
+}
+
+.footer__last {
+  grid-column: 1/3;
+}
+
+@media (min-width: 768px) {
+  .footer {
+    grid-template-rows: 1fr 1fr 1fr 0.2fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 2em;
+  }
+
+  .footer__last {
+    grid-column: 1/4;
+  }
+  .footer__welcome {
+    grid-column: 1/4;
+  }
+
 }
