--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,5 +1,4 @@
 
-
 .footer {
   display: grid;
 
@@ -54,6 +53,20 @@ p:last-child {
   grid-column: 1/3;
 }
 
+.footer__bio__socials {
+  display: flex;
+}
+
+.footer__bio__socials__icon {
+  width:13px;
+  height:13px;
+  margin-top: 1em;
+  margin-right: 0.2em;
+  margin-left: 0.2em;
+
+  border-radius: 50%;
+  background:rgb(124, 129, 126);
+}
 
 a {
   text-decoration: none;
