--- a/styles/footer.css
+++ b/styles/footer.css
@@ -96,3 +96,29 @@ a:visited {
   }
 
 }
+
+@media (min-width: 1024px) {
+  .footer {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 200px 20%;
+    grid-row-gap: 0.5em;
+  }
+
+  .footer__last {
+    display: none;
+
+    grid-column: 6/6;
+    grid-row: 2/2;
+  }
+  .footer__welcome {
+    margin: 0;
+    margin-bottom: 1em;
+
+    grid-column: 2/6;
+    grid-row: 2/2;
+  }
+
+  .footer>p {
+    min-height: 250px;
+  }
+}
