--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,4 +1,5 @@
 @import "reset.css";
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700|Roboto:300,400,700');
 @import "header.css";
 @import "main.css";
 @import "sections/about.css";
@@ -7,7 +8,7 @@
 @import "sections/quotes.css";
 @import "sections/more-info.css";
 @import "footer.css";
-@import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab');
+
 
 
 * {
@@ -23,6 +24,9 @@ p {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   font-weight: 400;
+}
+h1 {
+  font-weight: 700;
 }
 h1,h2,h3 {
   text-align: center;
