--- a/styles/sections/more-info.css
+++ b/styles/sections/more-info.css
@@ -1,30 +1,28 @@
-.more-info {
-}
+
 .more-info__items {
   display: flex;
 
-  margin: 20px 0 20px 0;
+  margin: 0 0 20px 0;
+
+  color: #fff;
 
   flex-flow: column nowrap;
   align-items: center;
 }
 .more-info__items__base {
-  display: flex;
-
   width: 280px;
-  height: 144px;
-  margin: 20px 0 0 0;
-
+  padding: 18px;
+  margin-bottom: 20px;
   text-align: center;
 
   background: linear-gradient(0deg, rgba(18, 30, 89, 0.8), rgba(18, 30, 89, 0.8)), url(../../images/more-info_bg_item-1.png), #C4C4C4;
   background-size: cover;
 
-  justify-content: center;
-  flex-flow: column nowrap;
-  align-items: center;
 }
-.more-info__items__base > h2 {
+.more-items__base:first-of-type {
+  margin: 0;
+}
+.more-
   font-size: 18px;
 }
 .more-info__items__base > h3 {
