--- a/styles/sections/works.css
+++ b/styles/sections/works.css
@@ -14,7 +14,6 @@
 }
 .works__info-items__item {
     max-width: 100px;
-    margin: 0 20px 0 0;
     padding: 18px 27px;
 
     text-align: center;
@@ -22,13 +21,23 @@
     color: #000;
     border: 1px solid #000;
 }
-.works__info-items__item__types h3 {
-    font-size: 14px;
+.works__info-items__item:first-child {
+  margin: 0 20px 0 0;
+
 }
+.works__info-items__item__types h3 {
+    font-size: 20px;
+}
+
 .works__info-items__item__types h3 span {
     padding: 0;
 
     font-family: 'Roboto', sans-serif;
-    font-size: 10px;
     font-weight: 300;
+}
+.works__info-items__item__types h3 span:first-of-type {
+  font-size: 14px;
+}
+.works__info-items__item__types h3 span:last-of-type {
+  font-size: 10px;
 }
