--- a/styles/sections/quotes.css
+++ b/styles/sections/quotes.css
@@ -5,6 +5,7 @@ html {
   display: flex;
 
   height: 310px;
+  padding: 0 10%;
 
   text-align: center;
 
@@ -19,7 +20,6 @@ html {
   align-items: center;
 }
 .quotes__heading {
-  width: 230px;
   margin: 0 auto;
 }
 .quotes__heading h1 {
@@ -48,4 +48,15 @@ html {
   font-family: 'PT Sans', sans-serif;
   font-size: 28.8rem;
 
+}
+
+@media all and (min-width: 768px) {
+  .quotes {
+    background-position: 110% 170%;
+  }
+  .quotes__heading h1 {
+    font-size: 36px;
+    line-height: 40px;
+
+  }
 }
