--- a/styles/header.css
+++ b/styles/header.css
@@ -17,16 +17,20 @@ header {
 	width:100%;
 	height:60px;
 
-  color: white;
-	border-bottom:1px solid #dddddd;
-	background: #121E59;
+  text-transform: uppercase;
 
+  color: #fff;
+	background: #121E59;
+	box-shadow: -2px 4px 37px -5px rgba(0,0,0,0.53);
+
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.4rem;
 	line-height:60px;
 }
 
 .menu__button {
   position: absolute;
-  z-index: 10000000000000;
+  z-index: 1;
   top: 0;
   right: 0;
 
@@ -45,7 +49,7 @@ header {
 }
 .menu__cross {
   position: absolute;
-  z-index:10000000000000;
+  z-index:10;
   top: 0px;
   right: 0;
 
@@ -64,7 +68,7 @@ header {
 }
 .menu__hamburger {
   position: absolute;
-  z-index: 1000000;
+  z-index: 10;
 
   width: 100%;
 
@@ -88,50 +92,32 @@ header {
 
   padding:15px 0 15px 0;
 
+  text-transform: uppercase;
+
   border-bottom:#dddddd 1px solid;
+
+  font-family: 'Roboto', sans-serif;
 }
 .menu__hamburger li:hover {
   display: block;
 
   padding:15px 0 15px 0;
 
-  border-bottom:#dddddd 1px solid;
-  background:#ffffff;
+  border-bottom:#ddd 1px solid;
+  background:#fff;
 }
 .menu__hamburger ul li a {
   margin: 0px;
 
   text-decoration: none;
 
-  color:#666;
+  color:#000;
 }
-.menu__hamburger ul li a:hover {
-  text-decoration:none;
-
-  color: #666;
-}
-.menu__hamburger a {
-  text-decoration:none;
-
-  color:#666;
-}
-.menu__hamburger a:hover {
-  text-decoration:none;
-
-  color:#666;
-}
-
 
 header {
   display:inline-block;
 
   font-size:12px;
-}
-span {
-  padding-left:20px;
-}
-a {
-  color:#336699;
 }
 
 @media (min-width: 768px) {
