--- a/styles/layout.css
+++ b/styles/layout.css
@@ -11,8 +11,7 @@
 
 
 
-* {
-  box-sizing: border-box;
+* { box-sizing: border-box;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
